--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -301,8 +301,8 @@
   </head>
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
-    <div class="tw-bg-yellow-500 tw-p-4 tw-text-white">
-      Tailwind is working!
+    <div class="tw-bg-red-500 tw-p-4 tw-text-white">
+      Tailwind is working! Hello, hello, hello!
     </div>
 
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
