--- a/assets/base.css
+++ b/assets/base.css
@@ -76,6 +76,12 @@
 
 /* base */
 
+body{
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .page-width {
   max-width: var(--page-width);
   margin: 0 auto;
