--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -1,20 +1,42 @@
 /*!**************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js!./src/tailwind.css ***!
   \**************************************************************************************************************/
-.tw-col-span-1 {
-    grid-column: span 1 / span 1
-}
 .tw-col-span-3 {
     grid-column: span 3 / span 3
 }
 .tw-col-span-4 {
     grid-column: span 4 / span 4
 }
+.tw-mx-auto {
+    margin-left: auto;
+    margin-right: auto
+}
+.tw-flex {
+    display: flex
+}
 .tw-grid {
     display: grid
 }
+.tw-h-4 {
+    height: 1rem
+}
+.tw-w-4 {
+    width: 1rem
+}
+.tw-w-full {
+    width: 100%
+}
+.tw-list-none {
+    list-style-type: none
+}
 .tw-grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr))
+}
+.tw-justify-center {
+    justify-content: center
+}
+.tw-gap-4 {
+    gap: 1rem
 }
 .tw-bg-red-500 {
     --tw-bg-opacity: 1;
@@ -23,12 +45,20 @@
 .tw-p-4 {
     padding: 1rem
 }
-.tw-text-center {
-    text-align: center
+.tw-text-left {
+    text-align: left
 }
 .tw-text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity, 1))
+}
+@media (min-width: 768px) {
+    .md\:tw-col-span-1 {
+        grid-column: span 1 / span 1
+    }
+    .md\:tw-text-center {
+        text-align: center
+    }
 }
 
 /*# sourceMappingURL=tailwind.css.map*/
