--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -298,6 +298,8 @@
         document.documentElement.classList.add('shopify-design-mode');
       }
     </script>
+
+    <link rel="stylesheet" href="{{ 'fonts.css' | asset_url }}">
   </head>
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
