wrapped up footer mobile + desktop

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -7,27 +7,42 @@
 .tw-col-span-4 {
     grid-column: span 4 / span 4
 }
-.tw-m-0 {
-    margin: 0px
-}
 .\!tw-m-0 {
     margin: 0px !important
+}
+.tw-m-0 {
+    margin: 0px
 }
 .tw-mx-auto {
     margin-left: auto;
     margin-right: auto
 }
+.\!tw-mb-2 {
+    margin-bottom: 0.5rem !important
+}
+.tw-mb-2 {
+    margin-bottom: 0.5rem
+}
 .tw-mt-5 {
     margin-top: 1.25rem
 }
-.\!tw-mb-\[2px\] {
-    margin-bottom: 2px !important
+.\!tw-mt-2 {
+    margin-top: 0.5rem !important
 }
-.\!tw-mb-1 {
-    margin-bottom: 0.25rem !important
+.\!tw-mt-4 {
+    margin-top: 1rem !important
 }
-.\!tw-mb-2 {
-    margin-bottom: 0.5rem !important
+.\!tw-mt-5 {
+    margin-top: 1.25rem !important
+}
+.\!tw-mt-\[2rem\] {
+    margin-top: 2rem !important
+}
+.\!tw-mt-\[3rem\] {
+    margin-top: 3rem !important
+}
+.tw-block {
+    display: block
 }
 .tw-flex {
     display: flex
@@ -35,14 +50,35 @@
 .tw-grid {
     display: grid
 }
+.tw-hidden {
+    display: none
+}
 .tw-h-4 {
     height: 1rem
+}
+.tw-h-\[36px\] {
+    height: 36px
+}
+.tw-h-\[24px\] {
+    height: 24px
+}
+.tw-h-6 {
+    height: 1.5rem
 }
 .tw-w-4 {
     width: 1rem
 }
 .tw-w-full {
     width: 100%
+}
+.tw-w-\[36px\] {
+    width: 36px
+}
+.tw-w-\[24px\] {
+    width: 24px
+}
+.tw-w-6 {
+    width: 1.5rem
 }
 .tw-list-none {
     list-style-type: none
@@ -56,35 +92,58 @@
 .tw-justify-center {
     justify-content: center
 }
+.tw-gap-1 {
+    gap: 0.25rem
+}
+.tw-gap-2 {
+    gap: 0.5rem
+}
 .tw-gap-4 {
     gap: 1rem
 }
 .tw-gap-\[2rem\] {
     gap: 2rem
 }
-.tw-gap-2 {
-    gap: 0.5rem
+.tw-gap-3 {
+    gap: 0.75rem
 }
-.tw-gap-1 {
-    gap: 0.25rem
+.tw-gap-\[1re\,\] {
+    gap: 1re,
 }
-.tw-border-t-0 {
-    border-top-width: 0px
+.tw-gap-\[1rem\] {
+    gap: 1rem
+}
+.tw-gap-\[1\.5rem\] {
+    gap: 1.5rem
+}
+.tw-rounded-full {
+    border-radius: 9999px
 }
 .\!tw-border-t-0 {
     border-top-width: 0px !important
+}
+.tw-bg-\[\#EEEFF0\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(238 239 240 / var(--tw-bg-opacity, 1))
 }
 .tw-bg-red-500 {
     --tw-bg-opacity: 1;
     background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1))
 }
-.tw-bg-blue-500 {
+.tw-bg-white {
     --tw-bg-opacity: 1;
-    background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1))
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
 }
-.tw-bg-\[\#EEEFF0\] {
+.tw-bg-black {
     --tw-bg-opacity: 1;
-    background-color: rgb(238 239 240 / var(--tw-bg-opacity, 1))
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1))
+}
+.tw-bg-\[\#595959\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(89 89 89 / var(--tw-bg-opacity, 1))
+}
+.\!tw-p-0 {
+    padding: 0px !important
 }
 .tw-p-0 {
     padding: 0px
@@ -92,11 +151,14 @@
 .tw-p-4 {
     padding: 1rem
 }
-.\!tw-p-0 {
-    padding: 0px !important
+.tw-p-1 {
+    padding: 0.25rem
 }
-.tw-pb-0 {
-    padding-bottom: 0px
+.tw-p-2 {
+    padding: 0.5rem
+}
+.tw-p-3 {
+    padding: 0.75rem
 }
 .\!tw-pb-0 {
     padding-bottom: 0px !important
@@ -107,14 +169,23 @@
 .tw-text-left {
     text-align: left
 }
-.tw-text-center {
-    text-align: center
+.\!tw-text-base {
+    font-size: 16px !important
+}
+.\!tw-text-sm {
+    font-size: 15px !important
 }
 .\!tw-text-xs {
     font-size: 12.5px !important
 }
-.\!tw-text-base {
+.\!tw-text-\[16px\] {
     font-size: 16px !important
+}
+.\!tw-text-\[14px\] {
+    font-size: 14px !important
+}
+.\!tw-tracking-\[0\.14px\] {
+    letter-spacing: 0.14px !important
 }
 .tw-text-black {
     --tw-text-opacity: 1;
@@ -124,9 +195,55 @@
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity, 1))
 }
+.\!tw-text-white {
+    --tw-text-opacity: 1 !important;
+    color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important
+}
+.hover\:tw-bg-gray-300:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1))
+}
+.hover\:tw-bg-\[\#404040\]:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1))
+}
+.hover\:tw-bg-black:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1))
+}
 @media (min-width: 768px) {
     .md\:tw-col-span-1 {
         grid-column: span 1 / span 1
+    }
+    .md\:tw-mt-5 {
+        margin-top: 1.25rem
+    }
+    .md\:tw-block {
+        display: block
+    }
+    .md\:tw-h-\[24px\] {
+        height: 24px
+    }
+    .md\:tw-w-\[24px\] {
+        width: 24px
+    }
+    .md\:tw-justify-center {
+        justify-content: center
+    }
+    .md\:tw-gap-1 {
+        gap: 0.25rem
+    }
+    .md\:tw-gap-\[2rem\] {
+        gap: 2rem
+    }
+    .md\:tw-gap-2 {
+        gap: 0.5rem
+    }
+    .md\:tw-gap-3 {
+        gap: 0.75rem
+    }
+    .md\:tw-gap-\[1rem\] {
+        gap: 1rem
     }
     .md\:tw-text-center {
         text-align: center
