--- a/sections/cart-icon-bubble.liquid
+++ b/sections/cart-icon-bubble.liquid
@@ -1,5 +1,5 @@
 {% if cart == empty %}
-  <span class="svg-wrapper">{{ 'icon-cart-empty.svg' | inline_asset_content }}</span>
+  <span class="svg-wrapper">{{ 'icon-cart.svg' | inline_asset_content }}</span>
 {% else %}
   <span class="svg-wrapper">{{ 'icon-cart.svg' | inline_asset_content }}</span>
 {% endif %}
