--- a/assets/base.css
+++ b/assets/base.css
@@ -649,8 +649,8 @@ h3 .icon-arrow,
 }
 
 .svg-wrapper > svg {
-  height: 100%;
-  width: 100%;
+  width: 19.633px;
+  height: 23.767px;
 }
 
 /* base-details-summary */
@@ -2081,18 +2081,27 @@ input[type='checkbox'] {
 
 .cart-count-bubble {
   position: absolute;
-  background-color: rgb(var(--color-button));
+  background-color: #84B4FB;
   color: rgb(var(--color-button-text));
-  height: 1.7rem;
-  width: 1.7rem;
-  border-radius: 100%;
+  height: 21.366px;
+  width: 30.192px;
+  border-radius: 12.183px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 0.9rem;
-  bottom: 0.8rem;
-  left: 2.2rem;
+  font-size: 20px;
+  bottom: 1.1rem;
+  left: 4.2rem;
   line-height: calc(1 + 0.1 / var(--font-body-scale));
+  margin-top: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .cart-count-bubble {
+    font-size: 18px;
+    width: 26.271px;
+    height: 18.008px;
+  }
 }
 
 /* utility-bar */
@@ -2367,11 +2376,24 @@ input[type='checkbox'] {
   .header--has-app {
     grid-template-columns: auto 1fr auto;
   }
+
+  .header{
+    padding: 10px 3rem 10px 15px !important;
+  }
+
+  .header__icon .svg-wrapper {
+    width: 18.065px !important;
+    height: 21.677px !important;
+  }
 }
 
 @media screen and (min-width: 990px) {
   .header {
     grid-template-columns: 1fr auto 1fr;
+  }
+
+  .header{
+    padding: 10px 3rem 10px 19px !important;
   }
 
   .header--top-left,
@@ -2513,7 +2535,7 @@ input[type='checkbox'] {
   display: flex;
   grid-area: icons;
   justify-self: end;
-  padding-right: 0.8rem;
+  padding-right: 2rem;
 }
 
 .header__icons .shopify-app-block {
@@ -2538,8 +2560,8 @@ input[type='checkbox'] {
 }
 
 .header__icon .svg-wrapper {
-  width: 44px;
-  height: 44px;
+  width: 24px;
+  height: 24px;
 }
 
 .header__icon::after {
