Updated Webpack configuration to specify output filename format, added main React component for product buttons, and integrated script into theme layout. Enhanced product section with a new div for React rendering and made minor adjustments to existing Liquid files for improved structure.

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -257,6 +257,7 @@
 
     {{ 'base.css' | asset_url | stylesheet_tag }}
     {{ 'tailwind.css' | asset_url | stylesheet_tag }}
+    <script src="{{ 'main.js' | asset_url }}" defer="defer"></script>
 
     <link rel="stylesheet" href="{{ 'component-cart-items.css' | asset_url }}" media="print" onload="this.media='all'">
 
