--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -475,6 +475,8 @@
                   render 'share-button', block: block, share_link: share_url
                 %}
 
+              <div id="product-form-buttons-holder-react"></div>
+                
               {%- when 'variant_picker' -%}
                 {% render 'product-variant-picker', product: product, block: block, product_form_id: product_form_id %}
               {%- when 'buy_buttons' -%}
