--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -26,8 +26,20 @@
 .tw-mb-2 {
     margin-bottom: 0.5rem
 }
+.tw-me-2 {
+    margin-inline-end: 0.5rem
+}
+.tw-ms-2 {
+    margin-inline-start: 0.5rem
+}
+.tw-mt-2 {
+    margin-top: 0.5rem
+}
 .tw-mt-5 {
     margin-top: 1.25rem
+}
+.tw-mt-4 {
+    margin-top: 1rem
 }
 .tw-block {
     display: block
@@ -62,6 +74,9 @@
 .tw-flex-col {
     flex-direction: column
 }
+.tw-items-center {
+    align-items: center
+}
 .tw-justify-center {
     justify-content: center
 }
@@ -80,8 +95,17 @@
 .tw-rounded-full {
     border-radius: 9999px
 }
+.tw-rounded-md {
+    border-radius: 0.375rem
+}
+.tw-rounded-\[8px\] {
+    border-radius: 8px
+}
 .\!tw-border-t-0 {
     border-top-width: 0px !important
+}
+.tw-border-none {
+    border-style: none
 }
 .tw-bg-\[\#595959\] {
     --tw-bg-opacity: 1;
@@ -95,6 +119,13 @@
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
 }
+.tw-bg-\[\#\#0835DB\] {
+    background-color: ##0835DB
+}
+.tw-bg-\[\#0835DB\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(8 53 219 / var(--tw-bg-opacity, 1))
+}
 .\!tw-p-0 {
     padding: 0px !important
 }
@@ -103,6 +134,22 @@
 }
 .tw-p-3 {
     padding: 0.75rem
+}
+.tw-px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem
+}
+.tw-py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem
+}
+.tw-px-\[16px\] {
+    padding-left: 16px;
+    padding-right: 16px
+}
+.tw-py-\[8px\] {
+    padding-top: 8px;
+    padding-bottom: 8px
 }
 .\!tw-pb-0 {
     padding-bottom: 0px !important
@@ -122,12 +169,45 @@
 .\!tw-text-xs {
     font-size: 12.5px !important
 }
+.tw-text-lg {
+    font-size: 25px
+}
+.tw-text-base {
+    font-size: 16px
+}
+.tw-text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem
+}
+.tw-font-bold {
+    font-weight: 700
+}
+.tw-font-\[600\] {
+    font-weight: 600
+}
+.tw-font-\[400\] {
+    font-weight: 400
+}
 .\!tw-tracking-\[0\.14px\] {
     letter-spacing: 0.14px !important
+}
+.tw-tracking-\[150\%\] {
+    letter-spacing: 150%
+}
+.tw-tracking-\[0\.16px\] {
+    letter-spacing: 0.16px
 }
 .tw-text-black {
     --tw-text-opacity: 1;
     color: rgb(0 0 0 / var(--tw-text-opacity, 1))
+}
+.tw-text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity, 1))
+}
+.tw-text-blue-500 {
+    --tw-text-opacity: 1;
+    color: rgb(59 130 246 / var(--tw-text-opacity, 1))
 }
 .hover\:tw-bg-black:hover {
     --tw-bg-opacity: 1;
