--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -62,7 +62,7 @@
 
 
 
-        <div class="product-form__buttons">
+        <div class="product-form__buttons {{ class }}">
           {%- liquid
             assign check_against_inventory = true
             if product.selected_or_first_available_variant.inventory_management != 'shopify' or product.selected_or_first_available_variant.inventory_policy == 'continue'
