Added new Tailwind CSS utility class for zero padding on medium screens and updated the main product section to apply this class for improved layout consistency.

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -243,6 +243,9 @@
     .md\:tw-gap-\[2rem\] {
         gap: 2rem
     }
+    .md\:tw-p-0 {
+        padding: 0px
+    }
     .md\:tw-text-center {
         text-align: center
     }
